styles/variables.scss
// colors
$primary-text-color: #000000;
$white-color: #FFFFFF;
$red-color: #FF0000;
$dark-red-color: #A00000;
$green-color: #008000;
$light-grey-color: #CBD5E0;
$light-grey-color-2: #E2E2E2;
$grey-color: #808080;
$grey-color-2: #5A6C7D;
$dark-grey-color: #4A5568;
$dark-grey-blue-color: #2C3E50;
$grey-blue-color: #7A9FF0;
$light-blue-color: #63B3ED;


// background-color
$background: linear-gradient(45deg, $grey-blue-color 0%, $dark-red-color 50%, $grey-blue-color 100%);
$background-color: #F7F5F2;
$white-background-color: $white-color;
$animation-background-color: #53647A;
$mobile-menu-background-color: #2D3748;
$primary-color: rgb(245, 245, 247);
$secondary-color: rgb(1, 42, 53);
$footer-background-color: $white-color;


// border-color
$mobile-menu-border-color: $dark-grey-color;


// box-shadow-color
$box-shadow-color: rgba(0, 0, 0, 0.1);


// z-index
$welcome-animation-z-index: 9999;
$menu-z-index: 50;
$footer-z-index: 30;


// height
$header-height-desktop: 110px;
$header-height-mobile: 90px;
$footer-height: 44px;


// breakpoints
$xs: 320px;
$sm: 640px;
$md: 768px;
$lg: 1024px;
$xl: 1280px;

